Fix investments fetching from connection